# pyCEURmake

./: .gitignore  .gitlab-ci.yml  .project  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  cache.yml
ceurws/: cache.py  ceur_ws.py  ceur_ws_cmd.py  ceur_ws_web_cmd.py  ceurws.py  config.py  dblp.py  endpoints.py  indexparser.py  location.py  loctime.py  namedqueries.py  papertocparser.py  querydisplay.py  sql_cache.py  template.py  textparser.py  urn.py  version.py  view.py  volume_neo4j.py  volume_view.py  volumebrowser.py  volumeparser.py  webserver.py  wikidata_view.py  wikidatasync.py  workshop.py
ceurws/models/: ceur.py  dblp.py  dblp2.py
ceurws/resources/: endpoints.yaml
ceurws/resources/css/: ceur-ws.css
ceurws/resources/queries/: ceurws.yaml  dblp.yaml
ceurws/resources/templates/: base.html  volume_index.html  volume_index.jinja  volume_index_body.html  volumes.html
ceurws/services/: entity_fishing.py  opentapioca.py
ceurws/utils/: download.py  json_cache.py  webscrape.py
css/: ceur-ws-semantic.css
docs/: index.md
resources/: endpoints.yaml  queries.yaml
scripts/: blackisort  ceur-ws  entity-fishing.py  getData.py  getVolumeIndexPages  getVolumeIndexPages.py  getVolumes  getceurws  install  installAndTest  k10plus  neo4j  queries  test  wdquery
search/: search_index.json
tests/: basetest.py  test_ceur.py  test_dblp.py  test_dblp2.py  test_entity_fishing.py  test_indexhtml_scrape.py  test_loctime.py  test_namedqueries.py  test_papertocparser.py  test_sessions.py  test_spacy_pipelines.py  test_sqlitedict.py  test_urn.py  test_volume.py  test_volume_neo4j.py  test_volumeparser.py  test_wikidatasync.py  test_workshop.py
tests/utils/: test_download.py
utils/: download.py  webscrape.py
