[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyCEURmake"
authors = [
  {name = "Tim Holzheim", email = "tim.holzheim@rwth-aachen.de"},
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
  
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
  { name = "Tim Holzheim", email = "tim.holzheim@rwth-aachen.de" },
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
    # https://pypi.org/project/geograpy3/
    'geograpy3>=0.2.5',
 	#https://github.com/martinblech/xmltodict
	'xmltodict>=0.13.0',
	# https://pypi.org/project/pylodstorage/
	'pylodstorage>=0.4.10',
	# https://github.com/pyparsing/pyparsing
	'pyparsing>=3.0.9',
	# https://pypi.org/project/beautifulsoup4/
	'BeautifulSoup4>=4.11.2',
	# https://pypi.org/project/lxml/
	'lxml>=4.9.2',
	# pyjustpywidgets
	# https://pypi.org/project/pyJustpyWidgets/
	'pyJustpyWidgets>=0.1.13',
	# https://pypi.org/project/justpy/
	'justpy>=0.13.0',
	# https://pypi.org/project/pyGenericSpreadSheet/
	'pyGenericSpreadSheet>=0.2.4',
	# https://pypi.org/project/py-3rdparty-mediawiki/
    'py-3rdparty-mediawiki>=0.9.3',
    # https://github.com/tqdm/tqdm
    'tqdm'
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "ceurws/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/py-sidif"
Documentation = "https://wiki.bitplan.com/index.php/Py-sidif"
Source = "https://github.com/WolfgangFahl/py-sidif"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "ceurws",
]
[project.scripts]
ceur-ws = "ceurws.ceur_ws_cmd:main"
